@@ -5,7 +5,7 @@ Requires PHP: 5.6
 Requires at least: 4.6
 Tested up to: 6.1.1
 WC requires at least: 3.6
-WC tested up to: 7.1.0
+WC tested up to: 7.3.0
 Stable tag: 2.2.1
 License: GPLv2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -83,6 +83,7 @@ The source code is freely available [in GitHub](https://github.com/Automattic/wo
 
 = 2.2.0 - 2023-01-19 =
 * Add   - Add option to let user pick whether to save the last package & service or not.
+* Fix   - Adjust checkout US zipcode validation to run only when exactly 5 or 10 digits are typed.
 
 = 2.1.1 - 2023-01-02 =
 * Fix   - Save the selected package box and do not skip the package step.
