@@ -11,7 +11,7 @@
  * Requires at least: 4.6
  * Tested up to: 6.1
  * WC requires at least: 3.6
- * WC tested up to: 7.1
+ * WC tested up to: 7.3
  *
  * Copyright (c) 2017-2022 Automattic
  *
