@@ -5,6 +5,7 @@
 
 = 2.2.0 - 2023-01-19 =
 * Add   - Add option to let user pick whether to save the last package & service or not.
+* Fix   - Adjust checkout US zipcode validation to run only when exactly 5 or 10 digits are typed.
 
 = 2.1.1 - 2023-01-02 =
 * Fix   - Save the selected package box and do not skip the package step.
